[package]
edition = "2024"
name = "pico-webserver"
version = "0.1.0"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
# embassy-embedded-hal = { version = "0.5.0",  features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0",  features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
# embassy-usb = { version = "0.5.1",  features = ["defmt"] }
embassy-net = { version = "0.7.1",  features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
# embassy-net-wiznet = { version = "0.2.1", features = ["defmt"] }
# embassy-futures = { version = "0.1.2"}
embassy-usb-logger = { version = "0.5.1" }
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0",  features = ["defmt"] }

panic-persist = { version = "0.3.0", features = ["utf8"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m-rt = "0.7.0"
# cortex-m = { version = "0.7.7" }
# panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = {version = "0.9.1", features = ["serde"]}
static_cell = "2.1"
log = "0.4"
# rand_core = "0.9.3"
picoserve = { version = "0.16.0", features = ["embassy", "log"]  }
serde = { version = "1.0.206", default-features = false, features = ["derive"] }
fixed = "1.29.0"
fixed-macro = "1.2.0"
critical-section = "1.2.0"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf" }
]
